# eigen-find-package-repro

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/android/ndk/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  prepare_eigen.sh
app/src/main/java/com/android/ndk/myapplication/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/android/ndk/myapplication/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
